syntax = "proto3";

package user;

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool isValid = 1;
  string userId = 2;
}

message UserPreferenceReq {
  string userId = 1;
}

message UserPreferenceRes {
  repeated string viewing_habits = 1;
}
service UserService {
    rpc validate (TokenRequest) returns (TokenResponse);
    rpc getUserPreferences(UserPreferenceReq) returns (UserPreferenceRes) {}
  }
